crates/nash-can/tests/snapshots/kinds__named_constructor_arity_remains_a_canonicalization_error.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype alias x = int Int\n"
info: diagnostic
---
nash::names::bad_arity

  × The `int` type needs 0 arguments, but I see 1 instead:
   ╭─[src/Main.nash:6:16]
 5 │ 
 6 │ type alias x = int Int
   ·                ───────
   ╰────
  help: Remove the extra arguments or check the grouping.
