crates/nash-can/tests/snapshots/kinds__named_partial_constructors_in_higher_kinded_arguments.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype box 'f = Box ('f int)\ntype alias pairAlias 'a 'b = pair 'a 'b\ntype alias withList = box list\ntype alias withPair = box (pair int)\ntype alias withAlias = box (pairAlias int)\n"
---
(
    [
        (
            "box",
            Arrow(
                Arrow(
                    Type,
                    Type,
                ),
                Type,
            ),
            [
                Apply {
                    head: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 20,
                            },
                            end: Position {
                                line: 5,
                                column: 22,
                            },
                        },
                        value: Var(
                            "f",
                        ),
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 23,
                                },
                                end: Position {
                                    line: 5,
                                    column: 26,
                                },
                            },
                            value: Named {
                                reference: QualifiedName {
                                    home: ModuleName {
                                        package: Some(
                                            PackageName {
                                                author: "nash",
                                                project: "core",
                                                version: "",
                                                source: Compiler,
                                                compilation: None,
                                            },
                                        ),
                                        name: "Builtin",
                                    },
                                    name: "int",
                                },
                                args: [],
                            },
                        },
                    ],
                },
            ],
        ),
    ],
    [
        (
            "pairAlias",
            Arrow(
                Type,
                Arrow(
                    Type,
                    Type,
                ),
            ),
            [
                Implied {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "core",
                                    version: "",
                                    source: Compiler,
                                    compilation: None,
                                },
                            ),
                            name: "Builtin",
                        },
                        name: "Storable",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 6,
                                    column: 35,
                                },
                                end: Position {
                                    line: 6,
                                    column: 37,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
                Implied {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "core",
                                    version: "",
                                    source: Compiler,
                                    compilation: None,
                                },
                            ),
                            name: "Builtin",
                        },
                        name: "Storable",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 6,
                                    column: 38,
                                },
                                end: Position {
                                    line: 6,
                                    column: 40,
                                },
                            },
                            value: Var(
                                "b",
                            ),
                        },
                    ],
                },
            ],
        ),
        (
            "withList",
            Type,
            [],
        ),
        (
            "withPair",
            Type,
            [],
        ),
        (
            "withAlias",
            Type,
            [],
        ),
    ],
)
