crates/nash-can/tests/snapshots/kinds__narrowed_function_alias_accepts_big_parameter.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype alias fn ('a : Big) = 'a -> 'a\nf : fn Int\nf x = x\n"
---
(
    [],
    [
        (
            "fn",
            Arrow(
                Type,
                Type,
            ),
            [
                Implied {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "core",
                                    version: "",
                                    source: Compiler,
                                    compilation: None,
                                },
                            ),
                            name: "Builtin",
                        },
                        name: "Big",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 16,
                                },
                                end: Position {
                                    line: 5,
                                    column: 18,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
            ],
        ),
    ],
)
