crates/nash-can/tests/snapshots/kinds__narrowed_function_alias_rejects_const_parameter.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype alias fn ('a : Big) = 'a -> 'a\nf : fn int\nf x = x\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Big` in the annotation for `f`:
   ╭─[src/Main.nash:7:8]
 6 │ type alias fn ('a : Big) = 'a -> 'a
 7 │ f : fn int
   ·        ───
 8 │ f x = x
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
