crates/nash-can/tests/snapshots/kinds__nested_annotation_in_lambda_is_checked.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype option 'a = None | Some 'a\nf = \\x ->\n    let\n        g : list (option int) -> int\n        g y = 1\n    in\n    g x\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Storable` in the annotation for `g`:
    ╭─[src/Main.nash:9:19]
  8 │     let
  9 │         g : list (option int) -> int
    ·                   ──────────
 10 │         g y = 1
    ╰────
  help: The type has `Term` representation, but `Storable` admits Big or Const types.
        Change the type or the representation requirement.
