crates/nash-can/tests/snapshots/kinds__nested_self_application_and_independent_alias_error_are_reported.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype g 'f = G ('f ('f 'f))\ntype w = W (g g)\ntype alias Count = int\n"
info: diagnostic
---
nash::names::kind_infinite

  × This application in field 1 of little constructor `G` in `g` would require an
  │ infinite kind:
   ╭─[src/Main.nash:6:23]
 5 │ 
 6 │ type g 'f = G ('f ('f 'f))
   ·                       ──
 7 │ type w = W (g g)
   ╰────
  help: Check the type application and the kinds of its arguments.

nash::names::representation_mismatch

  × This position requires `Big` in the uppercase name of alias `Count`:
   ╭─[src/Main.nash:8:20]
 7 │ type w = W (g g)
 8 │ type alias Count = int
   ·                    ───
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
