crates/nash-can/tests/snapshots/kinds__pair_of_const_and_big.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype alias p = pair int Data\ntype alias q = pair Data int\ntype alias r = pair Data Data\n"
---
(
    [],
    [
        (
            "p",
            Type,
            [],
        ),
        (
            "q",
            Type,
            [],
        ),
        (
            "r",
            Type,
            [],
        ),
    ],
)
