crates/nash-can/tests/snapshots/kinds__pair_of_const_and_const.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype alias p = pair int (list Data)\n"
---
(
    [],
    [
        (
            "p",
            Type,
            [],
        ),
    ],
)
